--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <p class="lead mb-5">
                         I am a junior undergraduate student at the Indian Institute of Technology Kanpur, majoring in Computer Science and Engineering. 
-                        Currently, my broad interests are in the fields of Computer Systems and Machine Learning. I am currently also exploring high performance computing, 
+                        Currently, my broad interests are in the fields of Computer Systems and Machine Learning. I am also exploring high performance computing, 
                         parallel computing and profiling of parallel software. I enjoy learning about new things to enhance my skillset, and am ever-ready to have a good 
                         discussion on any topic from CS to music to art!
                         <!-- I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. -->
@@ -113,13 +113,13 @@
                             <h3 class="mb-0">Indian Institute of Technology Kanpur</h3>
                             <div class="subheading mb-3">Bachelor of Technology</div>
                             <div>Computer Science and Engineering</div>
-                            <p>GPA: 9.96/10.0</p>
+                            <p>GPA: 10/10</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Dec 2021 - May 2025 (Expected)</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Ramsheth Thakur Public School</h3>
+                            <h3 class="mb-0">Ramsheth Thakur Public School, Kharghar</h3>
                             <div class="subheading mb-3">Central Board of Secondary Education - Class XII</div>
                             <p>Percentage: 98.2%</p>
                         </div>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Atomic Energy Central School - 1</h3>
+                            <h3 class="mb-0">Atomic Energy Central School - 1, Mumbai</h3>
                             <div class="subheading mb-3">Central Board of Secondary Education - Class X</div>
                             <p>Percentage: 99%</p>
                         </div>
