--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
                     <p class="lead mb-5">
-                        I am a junior undergraduate student at the Indian Institute of Technology Kanpur, majoring in Computer Science and Engineering. 
+                        I am a senior undergraduate student at the Indian Institute of Technology Kanpur, majoring in Computer Science and Engineering. 
                         Currently, my broad interests are in the fields of Computer Systems and Machine Learning. I am also exploring high performance computing, 
                         parallel computing and profiling of parallel software. I enjoy learning about new things to enhance my skillset, and am ever-ready to have a good 
                         discussion on any topic from CS to music to art!
