--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                     <h2 class="mb-5">Contact Me</h2>
 
                     <div class="subheading">
-                        C-129, Hall 2, IIT Kanpur · Kanpur, UP 208016
+                        B-108, Hall 9, IIT Kanpur · Kanpur, UP 208016
                     </div>
                     <div class="subheading mb-5">
                         <i class="fa-solid fa-phone"></i>
